fix: undo/redo buttons gap in Safari (#3836)

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -461,7 +461,8 @@
   }
 
   .undo-redo-buttons {
-    display: flex;
+    display: grid;
+    grid-auto-flow: column;
     gap: 0.4em;
     margin-top: auto;
     margin-bottom: auto;
